--- a/.github/workflows/sync2.yml
+++ b/.github/workflows/sync2.yml
@@ -15,23 +15,23 @@ jobs:
       - name: Checkout self repo
         uses: actions/checkout@v4
         with:
-          ref: main            # 明确指定分支
-          fetch-depth: 0       # 完整历史，避免 rebase 出错
+          ref: main
+          fetch-depth: 0
 
-      - name: Download latest interface.txt from upstream
+      - name: Download latest 2025.txt from upstream
         run: |
-          curl -sSL https://raw.githubusercontent.com/develop202/migu_video/main/interface.txt -o interface.txt
-          test -s interface.txt || (echo "Upstream returned empty file" && exit 1)
+          curl -sSL https://gitee.com/buzhenglin2025/tv/raw/master/2025.txt -o 2025.txt
+          test -s 2025.txt || (echo "Upstream returned empty file" && exit 1)
 
       - name: Commit and push if changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add interface.txt
+          git add 2025.txt
           if git diff --cached --quiet; then
             echo "No changes; nothing to commit."
           else
-            git commit -m "chore: sync interface.txt from upstream"
-            git pull --rebase origin main   # 关键：先同步远程，避免 128 错误
+            git commit -m "chore: sync 2025.txt from upstream"
+            git pull --rebase origin main
             git push origin HEAD:main
           fi
